--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
     <h1>خرید V2Ray پرسرعت</h1>
-    <p>در حال انتقال... اگر هدایت نشدید، <a href="https://mosifantastic.top">اینجا کلیک کنید</a>.</p>
+    <p>در حال انتقال... اگر هدایت نشدید، <a href="https://mahmoudii.ir/%D8%AE%D8%B1%DB%8C%D8%AF-%D8%B3%D8%B1%D9%88%D8%B1-v2ray/">اینجا کلیک کنید</a>.</p>
 </body>
 </html>
